[gd_scene load_steps=5 format=3 uid="uid://tlm6nhptxwkx"]

[ext_resource type="Theme" uid="uid://bb5xdt6d0xc8h" path="res://assets/themes/main.tres" id="1_bfym8"]
[ext_resource type="Script" uid="uid://dqx4yk84nwr8x" path="res://scripts/tracker.gd" id="1_g10r1"]
[ext_resource type="StyleBox" uid="uid://c854nh0fccd54" path="res://assets/styles/border_color_sbf.tres" id="2_dcoxp"]
[ext_resource type="Script" uid="uid://5gqyd7etib2b" path="res://scripts/mark_tracker.gd" id="3_ocy8l"]

[node name="Tracker" type="Control"]
layout_mode = 3
offset_right = 102.0
offset_bottom = 113.0
script = ExtResource("1_g10r1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 102.0
offset_bottom = 112.0
theme_override_styles/panel = ExtResource("2_dcoxp")

[node name="TrackerInfo" type="GridContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 7.0
offset_right = 100.0
offset_bottom = 113.0
theme = ExtResource("1_bfym8")
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 2

[node name="CharacterNamePlaceholder" type="Panel" parent="Panel/TrackerInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_bfym8")

[node name="CharacterName" type="Label" parent="Panel/TrackerInfo/CharacterNamePlaceholder"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(66, 0)
layout_direction = 3
layout_mode = 0
offset_left = -64.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 14.0
size_flags_horizontal = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"AllBorderLabel"
text = "Wolferno"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FundsPlaceholder" type="Panel" parent="Panel/TrackerInfo"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Funds" type="Label" parent="Panel/TrackerInfo/FundsPlaceholder"]
unique_name_in_owner = true
z_index = 1
clip_contents = true
custom_minimum_size = Vector2(1, 0)
layout_mode = 0
offset_left = -35.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 14.0
size_flags_horizontal = 8
theme = ExtResource("1_bfym8")
theme_type_variation = &"AllBorderLabel"
text = "Â¶ 500"
horizontal_alignment = 2

[node name="HP_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "HP:"

[node name="HP" type="Label" parent="Panel/TrackerInfo"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "??"
script = ExtResource("3_ocy8l")

[node name="ATK_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "ATK:"

[node name="ATK" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="SP_ATK_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "SP_ATK:"

[node name="SP_ATK" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="DEF_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "DEF:"

[node name="DEF" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="SP_DEF_INFO" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "SP_DEF:"

[node name="SP_DEF" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="SPEED_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "SPEED:"

[node name="SPEED" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="LUCK_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "LUCK:"

[node name="LUCK" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="CRIT_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "CRIT:"

[node name="CRIT" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")

[node name="ACC_Info" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "ACC:"

[node name="ACC" type="Label" parent="Panel/TrackerInfo"]
layout_mode = 2
mouse_filter = 0
theme = ExtResource("1_bfym8")
theme_type_variation = &"SmallTextLabel"
text = "?"
script = ExtResource("3_ocy8l")
